--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -13,7 +13,7 @@
                 <h4 class="card-header px-3">Menu</h4>
                 <ul class="list-group list-group-light list-group-small">
                     <li class="list-group-item px-3"><a href="">Home</a></li>
-                    <li class="list-group-item px-3"><a href="">Sign Out</a></li>
+                    <li class="list-group-item px-3"><a href="">Sign Me Out</a></li>
                 </ul>
                 <a href="{% url 'add-book' %}" class="m-2 btn btn-dark btn-sm">Add Book</a>
             </div>
