--- a/books/templates/books/book-detail.html
+++ b/books/templates/books/book-detail.html
@@ -10,7 +10,7 @@
             </div>
             <div style="height: 90vh">
                 <img class="img-fluid text-center" style="max-width: 100%; max-height: 100%" src="{{ book.image.url }}" alt="">
-                <h5 class="text-muted">Author: {{ book.author }}</h5>
+                <h5 class="text-muted">Book: {{ book.author }}</h5>
                 <small>ISBN: {{ book.isbn }}</small><br>
                 <small>Price: {{ book.price }}</small><br>
                 <a href="{% url 'edit-book' book.id %}" class="btn btn-success btn-sm">Edit Book</a>
