--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -4,23 +4,48 @@
 <head>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>My Django Application</title>
 </head>
 <body>
     <header>
-        <div class="topnav">
-        <a class="active" href="/">Home</a> |
-            {% if user.is_authenticated %}
-                <div> You are signed in as {{user.username}}...
-                <a href="{% url 'sign_out' %}">Sign out</a>
-            {% else %}
-                <a href="{% url 'sign_in' %}">Sign in</a> |
-                <a href="{% url 'users:sign_up' %}">Sign up</a>
-            {% endif %}
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Book Reviews</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+                        {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <span class="navbar-text me-3">Signed in as {{ user.username }}</span>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'sign_out' %}">Sign out</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'sign_in' %}">Sign in</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'users:sign_up' %}">Sign up</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
-    <main>
+    <main class="container mt-4">
         {% block content %}
+        <!-- Your page content goes here -->
         {% endblock %}
     </main>
+
+    <!-- JavaScript Bundle with Popper (Required for Bootstrap's interactive components like navbar toggle) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
