removed unused comments and implemented other suggestions from sonar cloud

--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -25,7 +25,7 @@
                     <div class="col-md-4">
                         <a href="{% url 'book-detail' book.id %}">
                             <!-- this is the book image -->
-                            <img src="{{ book.image.url }}" class="card-img" style="max-height:275px; width:auto;" />
+                            <img src="{{ book.image.url }}" class="card-img" style="max-height:275px; width:auto;" alt="book cover"/>
                         </a>
                     </div>
                     <div class="col-md-8">
