--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -31,7 +31,8 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <!-- this is the book title -->
-                            <h4 class="card-text">{{ book.title }}</h4>
+                            <h4 class="card-text">{{ book.title }}</h4><br>
+                            <h6 class="card-text">{{ book.author }}</h6>
                         </div>
                         <div class="card-body">
                             <!-- this is the book title -->
